--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -3,12 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:padding="10dp"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/item_no"
         android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:layout_height="21dp"
         android:layout_weight="9"
         android:textSize="15sp"/>
 
