--- a/app/src/main/res/layout/garbage.xml
+++ b/app/src/main/res/layout/garbage.xml
@@ -2,12 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <FrameLayout
-        android:id="@+id/container_ui"
+    <!-- Main activity does nothing but host the different fragments -->
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/nav_host_fragment_container"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/nav_graph" />
+
 
 </LinearLayout>
